# LovelyLLamas

./: .gitignore  Dockerfile  Master-Projekt - Verknüpfung.lnk  README.md  docker-compose.yml  pyproject.toml
checkpoints/final_classifier_dmodel_64_2024_12_12_bert/: best_model_CE_loss.pth  best_model_CE_loss_metadata.json  config.json  early_stopping.json  time_stats.json
checkpoints/final_classifier_dmodel_64_2024_12_12_bert_ct/: config.json  (+5 more)
data/: cities.csv  dataset_embedded_similarity.py  dataset_stats.py  dataset_tfidf_similarity.py  fetch.py  plot_world_map.py  preprocessor.py  setup.py  split_dataset.py  weather_data.json  weather_data_template.py
demo/: README.md  docker-compose.yml
gru/: GRU_apo.ipynb  GRU_collection.py  GRU_collection_old.py  GRU_long.ipynb  README.md  analyze_state.py  attention_advanced_GRU_training.ipynb  attention_model_loader.py  basic_GRU_training.ipynb  generate.py  weather_datasets.py  weather_gru_models.py
src/: .gitignore  bert_tokenizer.py  best_model.py  context_tokenizer.py  data_postprocessing.py  data_postprocessor.py  data_preprocessing.py  data_preprocessor.py  dataloader.py  dataset.py  determinism.py  dummy_tokenizer.py  early_stopping.py  eval.py  eval_classifier.py  eval_lstm.py  eval_metrics.py  eval_metrics_lstm.py  generate.py  generate_lstm.py  generate_transformer.py  itokenizer.py  loss.py  lstm.py  lstm_train.py  lstmruntest.py  metrics.py  metrics_lstm.py  model.py  predict.py  run.txt  tokenizer.py  train.py  train_classifier.py  train_lstm.py  train_transformer.py  train_weather_model.py  training_log.csv  training_utils.py  utils.py  (+1 more)
tests/: test_data_postprocessing.py  test_data_preprocessing.py  test_metrics.py  test_preprocessing.py  test_weather_dataset.py  test_weather_dataset_classifier.py  test_weather_extractor.py
(+285 files in other folders)
