[tool.poetry]
name = "lovelyllamas"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<=3.12"
cython = "^3.0.11"
numpy = "^2.1.2"
matplotlib = "^3.9.2"
requests = "^2.32.3"
lxml = "^5.3.0"
pandas = "^2.2.3"
torch = "^2.5.0"
tensorboard = "^2.18.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
