[tool.poetry]
name = "lovelyllamas"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

packages = [
    { include = "src" },
    { include = "data" },
]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
cython = "^3.0.11"
numpy = "<2.0.0"
matplotlib = "<3.9"
requests = "^2.32.3"
lxml = "^5.3.0"
pandas = "^2.2.3"
torch = "^2.5.0"
tensorboard = "^2.18.0"
setuptools = "^75.2.0"
wheel = "^0.44.0"
tqdm = "^4.66.6"
transformers = "^4.46.3"
evaluate = "^0.4.3"
datasets = "^3.1.0"
bert-score = "^0.3.13"
rouge-score = "^0.1.2"
sentence-transformers = "^3.3.1"
basemap = "^1.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
